--- a/KeyCount/Info.plist
+++ b/KeyCount/Info.plist
@@ -30,5 +30,9 @@
 	<string>Main</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>NSDockTilePlugIn</key>
+	<string></string>
+	<key>LSUIElement</key>
+	<true/>
 </dict>
 </plist>
